fix misalignment modal

--- a/react-node/src/components/DisplayFollowers.module.css
+++ b/react-node/src/components/DisplayFollowers.module.css
@@ -61,6 +61,9 @@
 .profileDiv {
   display: flex;
   width: 20vw;
+  background-color: #ff067e45;
+  padding: 1vh;
+  border-radius: 20px;
 }
 
 .profileNames {
